A bunch of long-needed refactorings:
 * Everything now can use cactus.family or cactus.families
 * There is a mojo superclass, FamilyAwareMojo that implements that logic consistently
 * Run policies no ensure the mojo really gets run